add:  weixin web page

--- a/tailwindcss.html
+++ b/tailwindcss.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 
+<div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
+<div class="h-14 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
+<div class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500"></div>
+<div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>
+<div class="h-14 bg-gradient-to-l from-violet-500 to-fuchsia-500"></div>
+<div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>
+
+
   <div style="display: flex; flex-direction: column; background: red; width: 200px; height: 500px;">
     <div style="flex-shrink: 0; width: 100px; height: 200px; background: blue;">哈还</div>
     <div style="flex-shrink: 0; width: 100px; height: 200px; background: green;">哈还</div>
@@ -21,15 +29,15 @@
     </div>
   </div>
 
-<span class="inline-grid grid-cols-3 gap-4 border-2">
-  <span class="border-2 rounded-xl mx-6 my-6">01</span>
-  <span class="border-2 rounded-xl mx-6 my-6">02</span>
-  <span class="border-2 rounded-xl mx-6 my-6">03</span>
-  <span class="border-2 rounded-xl mx-6 my-6">04</span>
-  <span class="border-2 rounded-xl mx-6 my-6">05</span>
-  <span class="border-2 rounded-xl mx-6 my-6">06</span>
+<span class="inline-grid grid-cols-3 border-2">
+  <span class="border-2 rounded-full mx-6 my-6">01</span>
+  <span class="border-2 rounded-full mx-6 my-6">02</span>
+  <span class="border-2 rounded-full mx-6 my-6">03</span>
+  <span class="border-2 rounded-full mx-6 my-6">04</span>
+  <span class="border-2 rounded-full mx-6 my-6">05</span>
+  <span class="border-2 rounded-full mx-6 my-6">06</span>
 </span>
-<span class="inline-grid grid-cols-3 gap-4 border-2">
+<span class="inline-grid grid-cols-3 border-2">
   <span class="border-2 rounded-xl mx-6 my-6">01</span>
   <span class="border-2 rounded-xl mx-6 my-6">02</span>
   <span class="border-2 rounded-xl mx-6 my-6">03</span>
@@ -38,27 +46,27 @@
   <span class="border-2 rounded-xl mx-6 my-6">06</span>
 </span>
 
-  <div class="container mx-auto grid gap-4 grid-cols-4 grid-rows-5 border-2 rounded-xl p-3 text-center">
-      <span class="mx-3 my-3">div-1</span>
-      <span class="mx-3 my-3">div-2</span>
-      <span class="mx-3 my-3">div-3</span>
-      <span class="mx-3 my-3">div-4</span>
-      <span class="mx-3 my-3">div-5</span>
-      <span class="mx-3 my-3">div-6</span>
-      <span class="mx-3 my-3">div-7</span>
-      <span class="mx-3 my-3">div-8</span>
-      <span class="mx-3 my-3">div-9</span>
-      <span class="mx-3 my-3">div-10</span>
-      <span class="mx-3 my-3">div-11</span>
-      <span class="mx-3 my-3">div-12</span>
-      <span class="mx-3 my-3">div-13</span>
-      <span class="mx-3 my-3">div-14</span>
-      <span class="mx-3 my-3">div-15</span>
-      <span class="mx-3 my-3">div-16</span>
-      <span class="mx-3 my-3">div-17</span>
-      <span class="mx-3 my-3">div-18</span>
-      <span class="mx-3 my-3">div-19</span>
-      <span class="mx-3 my-3">div-20</span>
+  <div class="container mx-auto grid gap-4 grid-cols-4 border-2 rounded-xl p-3 text-center gap-8">
+      <span>div-1</span>
+      <span>div-2</span>
+      <span>div-3</span>
+      <span>div-4</span>
+      <span>div-5</span>
+      <span>div-6</span>
+      <span>div-7</span>
+      <span>div-8</span>
+      <span>div-9</span>
+      <span>div-10</span>
+      <span>div-11</span>
+      <span>div-12</span>
+      <span>div-13</span>
+      <span>div-14</span>
+      <span>div-15</span>
+      <span>div-16</span>
+      <span>div-17</span>
+      <span>div-18</span>
+      <span>div-19</span>
+      <span>div-20</span>
   </div>
 
   <div class="container p-6 my-12 mx-auto bg-white rounded-xl shadow-lg flex items-center space-x-4">
@@ -130,20 +138,20 @@ World
 
 <div class="container mx-auto">
   <img class="float-right w-24 h-24" src="https://tvax4.sinaimg.cn/crop.0.0.512.512.180/006d9qwkly8gln447qitkj30e80e83yt.jpg?KID=imgbed,tva&Expires=1668667391&ssig=5WkTvev%2B2q" alt="ChitChat Logo">
-<p>
-  Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings of pee-pees and wee-wees on the Cat in the Hat and the Five Chinese Brothers? Doesn't HE deserve better? Look. If you think this is about overdue fines and missing books, you'd better think again. This is about that kid's right to read a book without getting his mind warped! Or: maybe that turns you on, Seinfeld; maybe that's how y'get your kicks. You and your good-time buddies.
-</p>
+  <p>
+    Maybe we can live without libraries, people like you and  me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings of pee-pees and wee-wees on the Cat in the Hat and the Five Chinese Brothers? Doesn't HE deserve better? Look. If you think this is about overdue fines and missing books, you'd better think again. This is about that kid's right to read a book without getting his mind warped! Or: maybe that turns you on, Seinfeld; maybe that's how y'get your kicks. You and your good-time buddies.
+  </p>
 </div>
 <br>
 <div class="container mx-auto">
   <img class="float-left w-24 h-24" src="https://tvax4.sinaimg.cn/crop.0.0.512.512.180/006d9qwkly8gln447qitkj30e80e83yt.jpg?KID=imgbed,tva&Expires=1668667391&ssig=5WkTvev%2B2q" alt="ChitChat Logo">
-<p>
-  Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings of pee-pees and wee-wees on the Cat in the Hat and the Five Chinese Brothers? Doesn't HE deserve better? Look. If you think this is about overdue fines and missing books, you'd better think again. This is about that kid's right to read a book without getting his mind warped! Or: maybe that turns you on, Seinfeld; maybe that's how y'get your kicks. You and your good-time buddies.
-</p>
+  <p>
+    Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings of pee-pees and wee-wees on the Cat in the Hat and the Five Chinese Brothers? Doesn't HE deserve better? Look. If you think this is about overdue fines and missing books, you'd better think again. This is about that kid's right to read a book without getting his mind warped! Or: maybe that turns you on, Seinfeld; maybe that's how y'get your kicks. You and your good-time buddies.
+  </p>
 </div>
 
 
-<div class="container mx-auto h-48 w-100 overflow-x-auto">
+<div class="container mx-auto h-48 w-96 overflow-x-auto">
   <div class="relative">
     <div class="sticky top-0 bg-blue-300">A</div>
       <div class="flex items-center space-x-4">
@@ -192,92 +200,55 @@ World
 </div>
 <br>
 
-<div class="container mx-auto grid grid-cols-3">
-  <!-- Pin to top left corner -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 left-0 top-0 h-16 w-16">01</div>
-</div>
-<!-- Span top edge -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 inset-x-0 top-0 h-16">02</div>
-</div>
-<!-- Pin to top right corner -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 top-0 right-0 h-16 w-16">03</div>
-</div>
-<!-- Span left edge -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 inset-y-0 left-0 w-16">04</div>
-</div>
-<!-- Fill entire parent -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 inset-0">05</div>
-</div>
-<!-- Span right edge -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 inset-y-0 right-0 w-16">06</div>
-</div>
-<!-- Pin to bottom left corner -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 bottom-0 left-0 h-16 w-16">07</div>
-</div>
-<!-- Span bottom edge -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 inset-x-0 bottom-0 h-16">08</div>
-</div>
-<!-- Pin to bottom right corner -->
-<div class="relative m-6 bg-blue-300 h-32 w-32">
-  <div class="absolute bg-green-300 bottom-0 right-0 h-16 w-16">09</div>
-</div>
-
-
-</div>
-
-<div class="container mx-auto sm: columns-2 lg:columns-3 xl:columns-4 2xl:columns-6 border-2 space-y-6">
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-    <div class="ml-2 mt-2 w-60 h-2/3 border-2">
-      <img class="w-1/2 h-full rounded-lg" src="https://tvax4.sinaimg.cn/crop.0.0.512.512.180/006d9qwkly8gln447qitkj30e80e83yt.jpg?KID=imgbed,tva&Expires=1668667391&ssig=5WkTvev%2B2q" />
-      <div class="absolute top-0 right-0 w-1/2 h-full bg-blue-300">
-        <div class="absolute top-0 right-0 h-10 w-1/2 text-right">MAT2B10</div>
-        <div class="absolute bottom-0 right-0 h-10 w-1/2 text-right">抽象代数 I, 第一版讲义上线了</div>
-      </div>
-    </div>
+<div class="container mx-auto grid grid-cols-3 justify-items-center">
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 left-0 top-0 h-16 w-16">01</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 inset-x-0 top-0 h-16">02</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 top-0 right-0 h-16 w-16">03</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 inset-y-0 left-0 w-16">04</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 inset-0">05</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 inset-y-0 right-0 w-16">06</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 bottom-0 left-0 h-16 w-16">07</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 inset-x-0 bottom-0 h-16">08</div>
   </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
-  </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
-  </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
-  </div>
-  <div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-lg break-inside-avoid">
-
+  <div class="relative m-6 bg-blue-300 h-32 w-32">
+    <div class="absolute bg-green-300 bottom-0 right-0 h-16 w-16">09</div>
   </div>
 </div>
 
-
+<div id="courses" class="container mx-auto 2sm:columns-1 sm:columns-2 lg:columns-3 xl:columns-4 2xl:columns-6 space-y-6">
+  <script>
+    let eles = new Array(24).join(',').split(',').map((i, j) => 
+      `<div class="mx-auto w-64 h-80 rounded-xl border-2 shadow-md hover:scale-105 ease-in duration-300 break-inside-avoid">
+        <div class="ml-4 mt-4 w-56 h-1/2 flex item-center">
+          <img class="w-1/2 h-full rounded-md" src="https://img1.baidu.com/it/u=1468972359,825906623&fm=253&fmt=auto&app=138&f=JPEG?w=342&h=500" />
+          <div class="relative w-1/2 h-full mr-1">
+            <div class="absolute top-0 right-0 w-11/12 text-right text-xl font-medium">MAT2B10</div>
+            <div class="absolute bottom-0 right-0 w-11/12 text-right text-sm">抽象代数 I 第一版讲义上线了</div>
+          </div>
+        </div>
+        <div class="ml-4 mt-4 w-56 h-1/2">
+          <h3 class="font-medium text-2xl mb-3">数学分析 I</h3>
+              <div class="text-sm h-12 overflow-hidden">实数理论,极限理论,函数连续性,一元函数微分学,实数理论,极限理论,函数连续性,一元函数微分学,数理论,极限理论,函数连续性,微分学,一元函数积分学</div>
+        </div>
+      </div>`
+    )
+    document.getElementById('courses').innerHTML = eles.reduce((i, j) => i + j);
+  </script>
+</div>
 </body>
 </html>
